# IlimiKudi

./: README.md  pyproject.toml  token_length.py  token_length.txt  unify.py
datasets/: moniepoint_blog_posts.csv  paystack_blog_posts.csv  paystack_support_posts.csv
ilimikudi/: data.py  datasets.py
ilimikudi/databases/: merged.db
ilimikudi/datasets/: gtb_support_posts.csv  merged.csv  opay_blog_posts.csv
scripts/: gtb_support.py  moniepoint_blog.py  opay_blog.py  paystack_blog.py  paystack_support.py
