[tool.poetry]
name = "ilimikudi"
version = "0.1.0"
description = ""
authors = ["thelaycon <tobitobitobiwhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.49.1"
drissionpage = "^4.1.0.13"
mamaduck = "^1.0.1"
pandas = "^2.2.3"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
